# ez-ops

./: .gitignore  LICENSE  README.md  poetry_scripts.py  pyproject.toml  setup.cfg
ez_ops/: devops_utils.py
ez_ops/ez_parser/: parser_handler.py  parser_node.py  parser_tree.py
ez_parser/: parser_handler.py  parser_node.py  parser_tree.py  std_arg_adders.py
