[tool.poetry]
name = "ez-ops"
version = "0.1.0"
description = "The ez-ops package provides a suite of utility functions for building a python DevOps platform from the ground up."
authors = ["Dani Lerner <dlerner97@gmail.com>"]
packages = [
    { include = "ez_ops" },
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.12.1"
mypy = "^1.10.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
style = "poetry_scripts:style"